modules/jpm2-web-bs5/src/main/webapp/static/css/_jpm.css
html {position: relative;min-height: 100%;}
/*body {margin-bottom: 50px !important;}*/
/*body.no-footer{margin-bottom: 0px !important;}*/
main {padding-top: 65px;}
.footer {
    position: absolute;
    bottom: 1px;
    width: 100%;
    height: 50px;
    line-height: 50px;
    background-color: #eeeeee;
}
.asynchronicProgress{height: 4px; width: 100%; margin-top: -13px; margin-bottom: 3px; display: none;}
.asynchronicProgress .progress-bar{height: 4px !important;}
#asynchronicProgress_status {font-size: 0.7em; color: gray; text-align: right; margin-top: -40px;}
.borderless td, .borderless th {border: none;}
[id^="showImageConverter"] {max-width: 100%;}
.list-operation-heading{white-space:nowrap;}
.list-pagination .pagination{margin-bottom: 0}
.operation-list{ padding: 0.25rem !important;}
.page-size{width: 60px !important;}
.jpm-list-table td{ padding: 0.25rem !important;}

.inline-block{display:inline-block}
.control-label{text-align: right;}
.converted-field-container .select2-container{
    display:block !important;
    width: 100% !important;
}
#content-header{
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: .75rem 1rem 0rem 1rem;
    margin-bottom: 1rem;
    background-color: #e9ecef;
    border-radius: .25rem;
}
#content-header h4{color: gray;margin-top: 10px;margin-left: 20px;}
.jpm-content-panels .card{margin-bottom: 5px;}

.flyover {
    left: 150%;
    overflow: hidden;
    position: fixed;
    width: 40%;
    opacity: 0.9;
    z-index: 1050;
    transition: left 0.6s ease-out 0s;
}
.flyover-centered {top: 50%;transform: translate(-50%, -50%);}
.flyover.in {left: 60%;}
.flyover-bottom {bottom: 10px;}
.flyover-top {top: 40px;}
.popover{max-width: 400px;}
.viewAttachmentIco{cursor: pointer}
.container-if-fixed-footer{margin-bottom:55px;}
.btn-group-xs > .btn, .btn-xs {padding: .25rem .4rem; font-size: .875rem; line-height: .5; border-radius: .2rem;}
.dropdown-300{max-height:300px;overflow-y:auto;}
.dropdown-500{max-height:500px;overflow-y:auto;}
.form-group{margin-bottom: 0.5rem;}
.list-operation-table-container{min-height: 350px;}
.nav-link{cursor: pointer;}
.tag{border-radius: 4px;padding: 2px;font-size: 0.9em;}
.pwdopsdiv{display: block;float: left;margin-right:6px;}
.pwdopsdiv a{font-family : Arial, Helvetica, sans-serif;font-size : 10px; }
.pwdstrengthbar{float:right;background:#cccccc;height:4px;margin:0;}
.pwdstrength{float:right; height:20px;width:70px;margin-top:3px;}
.pwdstrengthstr{float:right;clear:both;height:14px;margin-top:0px;font-family : Arial, Helvetica, sans-serif;font-size : 10px; }
.pwdfield{ extends: form-control;}
.modal-body .select2-container{z-index: 1100;} /*Avoid issues in modals*/
.inline-edit{color: #333333; text-decoration: none; border-bottom: 1px dashed;}
a{text-decoration: none;}
.nowrap{white-space:nowrap;}
.show-collection-converter{margin-bottom: 0;background-color: #e9ecef;opacity: 1;padding: 0.375rem 0.75rem 0.375rem 2rem;font-size: 1rem; border: 1px solid #ced4da;border-radius: 0.25rem;min-height: 38px;}
.inline-select > select{
    display: block;
    width: 100%;
    padding: 0.375rem 2.25rem 0.375rem 0.75rem;
    -moz-padding-start: calc(0.75rem - 3px);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    background-color: #fff;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
    background-repeat: no-repeat;
    background-position: right 0.75rem center;
    background-size: 16px 12px;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}
.collectionSearcherContainer{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(100, 1fr);
    grid-column-gap: 1em;
    grid-auto-flow: column;
    font-size: 0.9em;
}
.objectConverterInputDetails{font-size: 0.9em;color: gray;text-decoration: underline;}
/* https://bootstrap-menu.com/detail-multilevel.html  */
@media all and (min-width: 992px) {
	.dropdown-menu li{position: relative;}
	.dropdown-menu .submenu{ 
		display: none;
		position: absolute;
		left:100%; top:-7px;
	}
	.dropdown-menu .submenu-left{right:100%; left:auto;}
	.dropdown-menu > li:hover{ background-color: #f1f1f1 }
	.dropdown-menu > li:hover > .submenu{display: block;}
}
@media (max-width: 991px) {
    .dropdown-menu .dropdown-menu{margin-left:0.7rem; margin-right:0.7rem; margin-bottom: .5rem;}
}
tr.highligthed-instance-row td{border: 2px solid black !important;}
tr.highligthed-instance-row th{border-right: 2px solid black !important;}

